@@ -1,27 +1,40 @@
-/*
- * Copyright (C) Red Gate Software Ltd 2010-2023
- *
+/*-
+ * ========================LICENSE_START=================================
+ * flyway-core
+ * ========================================================================
+ * Copyright (C) 2010 - 2024 Red Gate Software Ltd
+ * ========================================================================
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- *
- *         http://www.apache.org/licenses/LICENSE-2.0
- *
+ * 
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ * 
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
+ * =========================LICENSE_END==================================
  */
 package org.flywaydb.core.internal.configuration;
 
+import java.util.Map.Entry;
+import java.util.stream.Collectors;
 import lombok.AccessLevel;
 import lombok.CustomLog;
 import lombok.NoArgsConstructor;
-import org.flywaydb.core.api.ErrorCode;
+import org.apache.commons.text.similarity.FuzzyScore;
+import org.flywaydb.core.api.CoreErrorCode;
 import org.flywaydb.core.api.FlywayException;
+import org.flywaydb.core.api.Location;
+import org.flywaydb.core.api.configuration.Configuration;
 import org.flywaydb.core.extensibility.ConfigurationExtension;
+import org.flywaydb.core.internal.command.clean.CleanModel;
 import org.flywaydb.core.internal.configuration.models.ConfigurationModel;
+import org.flywaydb.core.internal.configuration.models.EnvironmentModel;
+import org.flywaydb.core.internal.configuration.models.FlywayEnvironmentModel;
+import org.flywaydb.core.internal.configuration.models.FlywayModel;
 import org.flywaydb.core.internal.database.DatabaseTypeRegister;
 import org.flywaydb.core.internal.plugin.PluginRegister;
 import org.flywaydb.core.internal.util.ClassUtils;
@@ -52,6 +65,8 @@ import static org.flywaydb.core.internal.sqlscript.SqlScriptMetadata.isMultiline
 @CustomLog
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class ConfigUtils {
+    public static final String DEFAULT_CLI_SQL_LOCATION = "sql";
+    public static final String DEFAULT_CLI_JARS_LOCATION = "jars";
     public static final String CONFIG_FILE_NAME = "flyway.conf";
     public static final String CONFIG_FILES = "flyway.configFiles";
     public static final String CONFIG_FILE_ENCODING = "flyway.configFileEncoding";
@@ -62,6 +77,7 @@ public class ConfigUtils {
     public static final String CALLBACKS = "flyway.callbacks";
     public static final String CLEAN_DISABLED = "flyway.cleanDisabled";
     public static final String CLEAN_ON_VALIDATION_ERROR = "flyway.cleanOnValidationError";
+    public static final String COMMUNITY_DB_SUPPORT_ENABLED = "flyway.communityDBSupportEnabled";
     public static final String CONNECT_RETRIES = "flyway.connectRetries";
     public static final String CONNECT_RETRIES_INTERVAL = "flyway.connectRetriesInterval";
     public static final String DEFAULT_SCHEMA = "flyway.defaultSchema";
@@ -74,6 +90,7 @@ public class ConfigUtils {
     public static final String GROUP = "flyway.group";
     public static final String IGNORE_MIGRATION_PATTERNS = "flyway.ignoreMigrationPatterns";
     public static final String INIT_SQL = "flyway.initSql";
+    public static final String OUTPUT_TYPE = "flyway.outputType";
     public static final String INSTALLED_BY = "flyway.installedBy";
     public static final String LICENSE_KEY = "flyway.licenseKey";
     public static final String LOCATIONS = "flyway.locations";
@@ -82,6 +99,7 @@ public class ConfigUtils {
     public static final String SKIP_EXECUTING_MIGRATIONS = "flyway.skipExecutingMigrations";
     public static final String OUTPUT_QUERY_RESULTS = "flyway.outputQueryResults";
     public static final String PASSWORD = "flyway.password";
+    public static final String OUTPUT_PROGRESS = "flyway.outputProgress";
     public static final String PLACEHOLDER_PREFIX = "flyway.placeholderPrefix";
     public static final String PLACEHOLDER_REPLACEMENT = "flyway.placeholderReplacement";
     public static final String PLACEHOLDER_SUFFIX = "flyway.placeholderSuffix";
@@ -103,7 +121,6 @@ public class ConfigUtils {
     public static final String TABLE = "flyway.table";
     public static final String TABLESPACE = "flyway.tablespace";
     public static final String TARGET = "flyway.target";
-    public static final String CHERRY_PICK = "flyway.cherryPick";
     public static final String UNDO_SQL_MIGRATION_PREFIX = "flyway.undoSqlMigrationPrefix";
     public static final String URL = "flyway.url";
     public static final String USER = "flyway.user";
@@ -127,6 +144,8 @@ public class ConfigUtils {
     public static final String FLYWAY_PLUGINS_PREFIX = "flyway.plugins.";
 
     private static final PluginRegister PLUGIN_REGISTER = new PluginRegister();
+
+    private static final Map<String, String> JDBC_PROPERTY_ENVIRONMENT_VARIABLE_MAP = Map.of("FLYWAY_JDBC_PROPERTIES_ACCESSTOKEN", "accessToken");
 
     /**
      * Converts Flyway-specific environment variables to their matching properties.
@@ -168,6 +187,9 @@ public class ConfigUtils {
         }
         if ("FLYWAY_CLEAN_ON_VALIDATION_ERROR".equals(key)) {
             return CLEAN_ON_VALIDATION_ERROR;
+        }
+        if ("FLYWAY_COMMUNITY_DB_SUPPORT_DISABLED".equals(key)) {
+            return COMMUNITY_DB_SUPPORT_ENABLED;
         }
         if ("FLYWAY_CONFIG_FILE_ENCODING".equals(key)) {
             return CONFIG_FILE_ENCODING;
@@ -263,7 +285,7 @@ public class ConfigUtils {
         }
 
         if (key.matches("FLYWAY_JDBC_PROPERTIES_.+")) {
-            return JDBC_PROPERTIES_PREFIX + key.substring("FLYWAY_JDBC_PROPERTIES_".length());
+            return JDBC_PROPERTIES_PREFIX + JDBC_PROPERTY_ENVIRONMENT_VARIABLE_MAP.getOrDefault(key, key.substring("FLYWAY_JDBC_PROPERTIES_".length()).toLowerCase(Locale.ENGLISH));
         }
 
         if ("FLYWAY_REPEATABLE_SQL_MIGRATION_PREFIX".equals(key)) {
@@ -301,9 +323,6 @@ public class ConfigUtils {
         }
         if ("FLYWAY_TARGET".equals(key)) {
             return TARGET;
-        }
-        if ("FLYWAY_CHERRY_PICK".equals(key)) {
-            return CHERRY_PICK;
         }
         if ("FLYWAY_LOGGERS".equals(key)) {
             return LOGGERS;
@@ -347,7 +366,6 @@ public class ConfigUtils {
             return CONFIGURATIONS;
         }
 
-
         for (ConfigurationExtension configurationExtension : PLUGIN_REGISTER.getPlugins(ConfigurationExtension.class)) {
             String configurationParameter = configurationExtension.getConfigurationParameterFromEnvironmentVariable(key);
             if (configurationParameter != null) {
@@ -365,31 +383,62 @@ public class ConfigUtils {
      * $workingDirectory$/flyway.conf
      *
      * @param encoding The conf file encoding.
+     *
      * @throws FlywayException When the configuration failed.
      */
-    public static Map<String, String> loadDefaultConfigurationFiles(File installationDir, String encoding) {
+    public static Map<String, String> loadDefaultConfigurationFiles(File installationDir, String workingDirectory,
+        String encoding) {
         Map<String, String> configMap = new HashMap<>();
-        configMap.putAll(ConfigUtils.loadConfigurationFile(new File(installationDir.getAbsolutePath() + "/conf/" + ConfigUtils.CONFIG_FILE_NAME), encoding, false));
-        configMap.putAll(ConfigUtils.loadConfigurationFile(new File(System.getProperty("user.home") + "/" + ConfigUtils.CONFIG_FILE_NAME), encoding, false));
+        configMap.putAll(ConfigUtils.loadConfigurationFile(
+            new File(installationDir.getAbsolutePath() + "/conf/" + ConfigUtils.CONFIG_FILE_NAME), encoding, false));
+        configMap.putAll(ConfigUtils.loadConfigurationFile(
+            new File(System.getProperty("user.home") + "/" + ConfigUtils.CONFIG_FILE_NAME), encoding, false));
         configMap.putAll(ConfigUtils.loadConfigurationFile(new File(ConfigUtils.CONFIG_FILE_NAME), encoding, false));
-
+        if (workingDirectory != null) {
+            configMap.putAll(
+                ConfigUtils.loadConfigurationFile(new File(workingDirectory + "/" + ConfigUtils.CONFIG_FILE_NAME),
+                    encoding, false));
+        }
         return configMap;
     }
 
-    public static List<File> getDefaultTomlConfigFileLocations(File installationDir) {
-        return new ArrayList<>(Arrays.asList(new File(installationDir.getAbsolutePath() + "/conf/flyway.toml"),
-                      new File(System.getProperty("user.home") + "/flyway.toml"),
-                      new File("flyway.toml"),
-                      new File("flyway.user.toml")));
+    public static List<File> getDefaultLegacyConfigurationFiles(final File installationDir,
+        final String workingDirectory) {
+        final List<File> defaultList = new ArrayList<>(
+            List.of(new File(installationDir.getAbsolutePath() + "/conf/" + ConfigUtils.CONFIG_FILE_NAME),
+                new File(System.getProperty("user.home") + "/" + ConfigUtils.CONFIG_FILE_NAME),
+                new File(ConfigUtils.CONFIG_FILE_NAME)));
+        if (workingDirectory != null) {
+            defaultList.add(new File(workingDirectory + "/" + ConfigUtils.CONFIG_FILE_NAME));
+        }
+        return defaultList;
+    }
+
+    public static List<File> getDefaultTomlConfigFileLocations(final File installationDir,
+        final String workingDirectory) {
+        final List<File> defaultList = new ArrayList<>(
+            List.of(new File(installationDir.getAbsolutePath() + "/conf/flyway.toml"),
+                new File(installationDir.getAbsolutePath() + "/conf/flyway.user.toml"),
+                new File(System.getProperty("user.home") + "/flyway.toml"),
+                new File(System.getProperty("user.home") + "/flyway.user.toml"),
+                new File("flyway.toml"),
+                new File("flyway.user.toml")));
+        if (workingDirectory != null) {
+            defaultList.add(new File(workingDirectory + "/flyway.toml"));
+            defaultList.add(new File(workingDirectory + "/flyway.user.toml"));
+        }
+        return defaultList;
     }
 
     /**
      * Loads the configuration from this configuration file.
      *
-     * @param configFile The configuration file to load.
-     * @param encoding The encoding of the configuration file.
+     * @param configFile    The configuration file to load.
+     * @param encoding      The encoding of the configuration file.
      * @param failIfMissing Whether to fail if the file is missing.
+     *
      * @return The properties from the configuration file. An empty Map if none.
+     *
      * @throws FlywayException When the configuration file could not be loaded.
      */
     public static Map<String, String> loadConfigurationFile(File configFile, String encoding, boolean failIfMissing) throws FlywayException {
@@ -454,6 +503,7 @@ public class ConfigUtils {
      * Reads the configuration from a Reader.
      *
      * @return The properties from the configuration file. An empty Map if none.
+     *
      * @throws FlywayException When the configuration could not be read.
      */
     public static Map<String, String> loadConfigurationFromReader(Reader reader) throws FlywayException {
@@ -540,7 +590,7 @@ public class ConfigUtils {
      * Puts this property in the config if it has been set in any of these values.
      *
      * @param config The config.
-     * @param key The property name.
+     * @param key    The property name.
      * @param values The values to try. The first non-null value will be set.
      */
     public static void putIfSet(Map<String, String> config, String key, Object... values) {
@@ -556,7 +606,7 @@ public class ConfigUtils {
      * Puts this property in the config if it has been set in any of these values.
      *
      * @param config The config.
-     * @param key The property name.
+     * @param key    The property name.
      * @param values The values to try. The first non-null value will be set.
      */
     public static void putArrayIfSet(Map<String, String> config, String key, String[]... values) {
@@ -570,8 +620,10 @@ public class ConfigUtils {
 
     /**
      * @param config The config.
-     * @param key The property name.
+     * @param key    The property name.
+     *
      * @return The property value as a boolean if it exists, otherwise {@code null}.
+     *
      * @throws FlywayException when the property value is not a valid boolean.
      */
     public static Boolean removeBoolean(Map<String, String> config, String key) {
@@ -586,15 +638,17 @@ public class ConfigUtils {
         }
         if (!"true".equalsIgnoreCase(value) && !"false".equalsIgnoreCase(value)) {
             throw new FlywayException("Invalid value for " + key + " (should be either true or false): " + value,
-                                      ErrorCode.CONFIGURATION);
+                                      CoreErrorCode.CONFIGURATION);
         }
         return Boolean.valueOf(value);
     }
 
     /**
      * @param config The config.
-     * @param key The property name.
+     * @param key    The property name.
+     *
      * @return The property value as an integer if it exists, otherwise {@code null}.
+     *
      * @throws FlywayException When the property value is not a valid integer.
      */
     public static Integer removeInteger(Map<String, String> config, String key) {
@@ -606,35 +660,61 @@ public class ConfigUtils {
             return Integer.valueOf(value);
         } catch (NumberFormatException e) {
             throw new FlywayException("Invalid value for " + key + " (should be an integer): " + value,
-                                      ErrorCode.CONFIGURATION);
+                                      CoreErrorCode.CONFIGURATION);
         }
     }
 
-    public static void dumpConfigurationModel(ConfigurationModel config) {
+    public static boolean detectNullConfigModel(ConfigurationModel model) {
+        if (model.getEnvironments().isEmpty()
+            && model.getFlyway().getPluginConfigurations().isEmpty()
+            && ClassUtils.getGettableFieldValues(model.getFlyway(), "").isEmpty()) {
+            return true;
+        }
+        return false;
+    }
+
+    public static void dumpEnvironmentModel(EnvironmentModel model, String envKey, String configMessage) {
         if (!LOG.isDebugEnabled()) {
             return;
         }
-        Map<String, String> configMap = new TreeMap<>(ClassUtils.getGettableFieldValues(config.getFlyway(), "flyway."));
-        config.getEnvironments().forEach((name, env) -> configMap.putAll(ClassUtils.getGettableFieldValues(env, "environments." + name + ".")));
+        dumpConfigurationMap(getEnvironmentMap(model, envKey), configMessage);
+    }
+
+    public static void dumpConfigurationModel(ConfigurationModel config, String configMessage) {
+        if (!LOG.isDebugEnabled()) {
+            return;
+        }
+        dumpConfigurationMap(getConfigurationMapFromModel(config), configMessage);
+    }
+
+    private static Map<String, String> getConfigurationMapFromModel(final ConfigurationModel config) {
+        final Map<String, String> configMap = new TreeMap<>(ClassUtils.getGettableFieldValues(config.getFlyway(), "flyway."));
+        config.getEnvironments().forEach((name, env) -> configMap.putAll(getEnvironmentMap(env, name)));
 
         config.getFlyway().getPluginConfigurations().forEach((name, pluginConfig) -> {
             if (pluginConfig instanceof Map<?, ?>) {
                 ((Map<?, ?>) pluginConfig).forEach((key, value) -> configMap.put("flyway." + name + "." + key, value.toString()));
+            } else {
+                configMap.put("flyway." + name, pluginConfig.toString());
             }
         });
 
         config.getRootConfigurations().forEach((name, pluginConfig) -> {
-                if (pluginConfig instanceof Map<?, ?>) {
-                    ((Map<?, ?>) pluginConfig).forEach((key, value) -> configMap.put(name + "." + key, value.toString()));
-                }
+            if (pluginConfig instanceof Map<?, ?>) {
+                ((Map<?, ?>) pluginConfig).forEach((key, value) -> configMap.put(name + "." + key, value.toString()));
+            }
         });
-
-        dumpConfigurationMap(configMap);
+        return configMap;
     }
 
-    public static void dumpConfigurationMap(Map<String, String> config) {
+    public static Map<String, String> getEnvironmentMap(EnvironmentModel model, String envKey) {
+        return ClassUtils.getGettableFieldValues(model,
+            "environments." + envKey + ".");
+    }
+
+    public static void dumpConfigurationMap(Map<String, String> config, String configMessage) {
         if (LOG.isDebugEnabled()) {
-            LOG.debug("Using configuration:");
+            LOG.debug(configMessage);
             LOG.debug(getConfigMapDump(config));
         }
     }
@@ -645,17 +725,36 @@ public class ConfigUtils {
             String key = entry.getKey();
             String value = entry.getValue();
 
-            if (key.toLowerCase().endsWith("password") || key.toLowerCase().endsWith("token")) {
-                value = StringUtils.trimOrPad("", value.length(), '*');
-            } else if (ConfigUtils.LICENSE_KEY.equals(key)) {
-                value = value.substring(0, 8) + "******" + value.substring(value.length() - 4);
-            } else if (key.toLowerCase().endsWith("url")) {
+            value = StringUtils.redactValueIfSensitive(key, value);
+
+            if (key.toLowerCase().endsWith("url")) {
                 value = DatabaseTypeRegister.redactJdbcUrl(value);
+            } else if (key.toLowerCase().endsWith("jdbcproperties")) {
+                value = StringUtils.redactedValueStringOfAMap(value);
             }
 
             dump.append(key).append(" -> ").append(value).append("\n");
         }
         return dump.toString();
+    }
+
+    public static List<String> getPossibleFlywayConfigurations(final String unknownConfig, FlywayEnvironmentModel model) {
+        final List<String> config;
+        if (model instanceof final FlywayModel flywayModel){
+            config = ClassUtils.getGettableField(flywayModel);
+        } else {
+            config = ClassUtils.getGettableField(model);
+        }
+        final FuzzyScore score = new FuzzyScore(Locale.ENGLISH);
+        final Entry<Integer, List<String>> possibleConfigurations = config.stream()
+            .filter(key -> !key.equals(unknownConfig))
+            .filter(key -> ((double)score.fuzzyScore(unknownConfig, key)) / ((double)score.fuzzyScore(unknownConfig, unknownConfig)) >= 0.25)
+            .collect(Collectors.groupingBy(key -> score.fuzzyScore(unknownConfig, key), TreeMap::new, Collectors.toList()))
+            .lastEntry();
+        if (possibleConfigurations == null) {
+            return List.of();
+        }
+        return possibleConfigurations.getValue();
     }
 
     /**
@@ -677,7 +776,159 @@ public class ConfigUtils {
             String message = String.format("Unknown configuration %s: %s",
                                            property,
                                            StringUtils.arrayToCommaDelimitedString(unknownFlywayProperties.toArray()));
-            throw new FlywayException(message, ErrorCode.CONFIGURATION);
+
+            message += ". Please check your " + (prefix == null ? "script config files" : "conf files or commandline parameters");
+            throw new FlywayException(message, CoreErrorCode.CONFIGURATION);
         }
+    }
+
+    public static CleanModel getCleanModel(Configuration conf) {
+        ConfigurationExtension extensionNew = conf.getPluginRegister().getLicensedPlugin("SQLServerConfigurationExtension", conf);
+        ConfigurationExtension extensionDepreciated = conf.getPluginRegister().getLicensedPlugin("CleanModeConfigurationExtension", conf);
+        CleanModel cleanModelNew = null;
+        CleanModel cleanModelDepreciated = null;
+
+        if (extensionNew != null) {
+            cleanModelNew = (CleanModel) ClassUtils.getFieldValue(extensionNew, "clean");
+        }
+        if (extensionDepreciated != null) {
+            cleanModelDepreciated = (CleanModel) ClassUtils.getFieldValue(extensionDepreciated, "clean");
+        }
+
+        CleanModel result = cleanModelNew != null ? cleanModelNew : cleanModelDepreciated;
+        if (result != null) {
+            result.validate();
+            return result;
+        } else {
+            return new CleanModel();
+        }
+    }
+
+    public static void setCleanModel(Configuration conf, CleanModel model) {
+        ConfigurationExtension extensionNew = conf.getPluginRegister().getLicensedPlugin("SQLServerConfigurationExtension", conf);
+        ConfigurationExtension extensionDepreciated = conf.getPluginRegister().getLicensedPlugin("CleanModeConfigurationExtension", conf);
+
+        if (extensionNew != null) {
+            ClassUtils.setFieldValue(extensionNew, "clean", model);
+        } else if (extensionDepreciated != null) {
+            ClassUtils.setFieldValue(extensionDepreciated, "clean", model);
+        }
+    }
+
+    public static boolean shouldUseDefaultCliSqlLocation(File sqlFolder, boolean areOtherLocationsConfigured) {
+        if (areOtherLocationsConfigured) {
+            return false;
+        }
+        if (sqlFolder.exists()) {
+            warnIfUsingDeprecatedMigrationsFolder(sqlFolder, ".sql");
+            return true;
+        } else {
+            LOG.warn("No locations configured and default location '" + sqlFolder.getName() + "' not found.");
+            return false;
+        }
+    }
+
+    public static void warnIfUsingDeprecatedMigrationsFolder(File folder, String fileExtension) {
+        try {
+            if (Arrays.stream(folder.listFiles()).anyMatch(f -> f.getName().endsWith(fileExtension))) {
+                LOG.warn("Storing migrations in '" + folder.getName() + "' is not recommended and default scanning of this location may be deprecated in a future release");
+            }
+        } catch (Exception ignored) {
+        }
+    }
+
+    public static void makeRelativeLocationsBasedOnWorkingDirectory(String workingDirectory, Map<String, String> config) {
+        String locationString = config.get(ConfigUtils.LOCATIONS);
+        String[] locations = new String[]{ Location.FILESYSTEM_PREFIX};
+        if (StringUtils.hasText(locationString)) {
+            locations = locationString.split(",");
+        }
+        makeRelativeLocationsBasedOnWorkingDirectory(workingDirectory, locations);
+
+        config.put(ConfigUtils.LOCATIONS, StringUtils.arrayToCommaDelimitedString(locations));
+    }
+
+    public static void makeRelativeLocationsBasedOnWorkingDirectory(String workingDirectory, List<String> locations) {
+        String[] locationsArray = locations.toArray(new String[0]);
+        makeRelativeLocationsBasedOnWorkingDirectory(workingDirectory, locationsArray);
+        locations.clear();
+        locations.addAll(Arrays.asList(locationsArray));
+    }
+
+    public static void makeRelativeLocationsInEnvironmentsBasedOnWorkingDirectory(String workingDirectory, Map<String, EnvironmentModel> environments) {
+        environments.forEach((key, model) -> {
+            List<String> locations = model.getFlyway().getLocations();
+            if (locations != null) {
+                makeRelativeLocationsBasedOnWorkingDirectory(workingDirectory, locations);
+                model.getFlyway().setLocations(locations);
+            }
+        });
+    }
+
+    public static void makeRelativeLocationsBasedOnWorkingDirectory(String workingDirectory, String[] locations) {
+        for (int i = 0; i < locations.length; i++) {
+            if (locations[i].startsWith(Location.FILESYSTEM_PREFIX)) {
+                String newLocation = locations[i].substring(Location.FILESYSTEM_PREFIX.length());
+                File file = new File(newLocation);
+                if (!file.isAbsolute()) {
+                    file = new File(workingDirectory, newLocation);
+                }
+                locations[i] = Location.FILESYSTEM_PREFIX + file.getAbsolutePath();
+            }
+        }
+    }
+
+    public static String getReportFilenameWithWorkingDirectory(Configuration conf) {
+        return getFilenameWithWorkingDirectory(conf.getReportFilename(), conf);
+    }
+
+    public static String getFilenameWithWorkingDirectory(String filename, Configuration conf) {
+        return getFilenameWithWorkingDirectory(filename, conf.getWorkingDirectory());
+    }
+
+    public static String getFilenameWithWorkingDirectory(String filename, String workingDirectory) {
+        if (!StringUtils.hasText(filename)) {
+            return workingDirectory;
+        }
+
+        if (workingDirectory != null && !new File(filename).isAbsolute()) {
+            return new File(workingDirectory, filename).getPath();
+        } else {
+            return filename;
+        }
+    }
+
+    public static void makeRelativeJarDirsBasedOnWorkingDirectory(String workingDirectory, Map<String, String> config) {
+        String jarDirsString = config.get(ConfigUtils.JAR_DIRS);
+        String[] jarDirs = new String[0];
+
+        if (StringUtils.hasText(jarDirsString)) {
+            jarDirs = jarDirsString.split(",");
+        }
+
+        jarDirs = Arrays.stream(jarDirs)
+            .map(dir -> getFilenameWithWorkingDirectory(dir, workingDirectory))
+            .toArray(String[]::new);
+
+        config.put(ConfigUtils.JAR_DIRS, StringUtils.arrayToCommaDelimitedString(jarDirs));
+    }
+
+    public static void makeRelativeJarDirsBasedOnWorkingDirectory(String workingDirectory, List<String> jarDirs) {
+        List<String> jarDirsUpdated = jarDirs.stream()
+            .map(dir -> getFilenameWithWorkingDirectory(dir, workingDirectory))
+            .toList();
+        jarDirs.clear();
+        jarDirs.addAll(jarDirsUpdated);
+    }
+
+    public static void makeRelativeJarDirsInEnvironmentsBasedOnWorkingDirectory(String workingDirectory, Map<String, EnvironmentModel> environments) {
+        environments.forEach((key, model) -> {
+            List<String> jarDirs = model.getFlyway().getJarDirs();
+            if (jarDirs != null) {
+                model.getFlyway().setJarDirs(jarDirs.stream()
+                    .map(dir -> getFilenameWithWorkingDirectory(dir, workingDirectory))
+                    .collect(Collectors.toList()));
+            }
+        });
     }
 }
